<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Maventy</string>
    <string name="welcome">Welcome, </string>
    <string name="welcome_patients_in_local_database">Patients in the local database: </string>
    <string name="welcome_patients_pending_to_upload">Patients pending to upload: </string>
    <string name="welcome_username">you are not logged in …</string>
    <string name="visit_new_menu_title">New visit</string>
    <string name="visit_new_menu_sex">Sex</string>
    <string name="visit_new_radiobutton_position_standing">Standing</string>
    <string name="visit_new_radiobutton_position_recumbent">Recumbent</string>
    <string name="visit_new_button_getResults">Get Results</string>
    <string name="visit_new_menu_sex_male">Male</string>
    <string name="visit_new_menu_sex_female">Female</string>
    <string name="visit_new_menu_birthdate">Birthdate</string>
    <string name="visit_new_menu_visitdate">Visit date</string>
    <string name="visit_new_menu_weight">Weight (Kg)</string>
    <string name="visit_new_menu_head_circunference">Head circumference (cm) (0 – 24 months only):</string>
    <string name="visit_new_menu_length">Length or height (cm):</string>
    <string name="visit_new_menu_position">Height position:</string>
    <string name="visit_new_menu_button_change_the_date">Change the date</string>
    <string name="visit_new_alert_message_sex">Choose a sex value</string>
    <string name="visit_new_alert_message_position">Choose a position value</string>
    <string name="visit_new_alert_message_weight">Weight value is not correct</string>
    <string name="visit_new_alert_message_lenght">Length or Height value is not correct</string>
    <string name="visit_new_alert_message_birthdate">Birthdate should be before the visit date</string>
    <string name="visit_new_alert_message_head">Head circumference value is not correct</string>
    <string name="visit_new_alert_message_wrong_weight_input">Oops! Invalid weight value. Correct way: 4.45</string>
    <string name="visit_new_alert_message_wrong_length_input">Oops! Invalid head circunference value. Correct way: 20.1"</string>
    <string name="visit_new_alert_message_wrong_head_input">Oops! Invalid length value. Correct way: 50.21</string>
    <string name="visit_new_alert_message_wrong_min_value">Min. value: </string>
    <string name="visit_new_alert_message_wrong_max_value">Max. value: </string>
    <string name="visit_new_alert_message_wrong_empty">Oops! empty.</string>
    <string name="visit_to_string_text">Visit on day: </string>
    <string name="visit_to_string_alarm">Alarm!</string>
    <string name="results_weight">Weight (kg)</string>
    <string name="results_lengthorheight">Length or height (cm)</string>
    <string name="results_head_circunference">Head circumference (cm)</string>
    <string name="results_bmi">Body mass index (BMI)</string>
    <string name="results_weight_length">Weight for height</string>
    <string name="results_measured">Measured</string>
    <string name="results_percentile">Percentile</string>
    <string name="results_zscore">z-score</string>
    <string name="results_menu_save_button">Save</string>
    <string name="results_menu_new_visit">New visit</string>
    <string name="results_menu_plot_data">Plot</string>
    <string name="results_title">Results</string>
    <string name="plotvisit_line_malnourished">malnourished</string>
    <string name="plotvisit_line_over">over</string>
    <string name="plotvisit_yaxis_percentile">Percentile</string>
    <string name="plotvisit_bar_age_weight">Weight</string>
    <string name="plotvisit_bar_age_height">Height</string>
    <string name="plotvisit_bar_age_head">Head</string>
    <string name="plotvisit_bar_age_bmi">BMI</string>
    <string name="plotvisit_bar_weight_height">W/H</string>
    <string name="plotvisit_showing_results">Showing results</string>
    <string name="db_patient_title">Patient info</string>
    <string name="db_explore_patients_title">Patients</string>
    <string name="db_explore_patients_search">Search local </string>
    <string name="db_patient_add_title">Add patient</string>
    <string name="db_patient_add_name">Name</string>
    <string name="db_patient_add_lastname">Last name</string>
    <string name="db_patient_add_residence">Residence</string>
    <string name="db_patient_add_caregiver">Caregiver</string>
    <string name="db_patient_add_sex">Sex</string>
    <string name="db_patient_add_birthday">Birthday</string>
    <string name="db_patient_save_button">Save data</string>
    <string name="db_patient_clear_button">Clear</string>
    <string name="db_patient_info_button_edit">Edit</string>
    <string name="db_patient_add_alert_caregiver_title">Caregiver field is blank</string>
    <string name="db_patient_add_alert_caregiver_message">Are you sure you do not want to fill in a caregiver name</string>
    <string name="db_patient_add_yes">Yes</string>
    <string name="db_patient_add_no">No</string>
    <string name="db_patient_info_button_delete">Delete</string>
    <string name="db_patient_info_button_new_visit">New Visit</string>
    <string name="db_patient_add_error_already_in_db">Patient already in the database</string>
    <string name="db_patient_add_error_empty_form">Oops! empty form.</string>
    <string name="db_patient_delete">Delete patient: </string>
    <string name="db_patient_delete_message">Are you sure you want to delete this patient?</string>
    <string name="db_patient_delete_yes">Yes, delete it</string>
    <string name="db_patient_delete_no">No</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_database">Tracking database</string>
    <string name="main_button_upload">Upload visits</string>
    <string name="main_button_visit">Z-score calculator</string>
    <string name="main_error_message_starting_newvisit_activity">Error trying to start New Visit activity</string>
    <string name="main_error_message_starting_maventyandroid_activity">Error trying to start MaventyAndroid activity</string>
    <string name="main_error_message_starting_exploredatabase_activity">Error trying to start ExploreDatabase activity</string>
    <string name="main_error_message_starting_settings_activity">Error trying to start Settings activity</string>
    <string name="main_error_message_starting_upload_activity">Error trying to start Upload activity</string>
    <string name="main_error_message_starting_tos_activity">Error trying to start TOS activity</string>
    <string name="visit_save_add_comment">Add a comment</string>
    <string name="visit_save_main_title">Save the visit</string>
    <string name="visit_save_button">Save</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_spanish">Español</string>
    <string name="settings_language_french">Français</string>
    <string name="settings_language_malagasy">Malagasy</string>
    <string name="settings_main_menu">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_email">email</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_login_error">Login details are wrong.</string>
    <string name="settings_error_message_starting_main_class">Error going back to Main activity</string>
    <string name="settings_error_message_datasource_reading">Error opening Settings datasource</string>
    <string name="settings_error_message_decrypting_password">Exception in the decrypt process of the password</string>
    <string name="settings_error_message_datasource_saving_new_settings">Error saving a new Settings</string>
    <string name="button_save_settings">Save settings</string>
    <string name="tools_male">Male</string>
    <string name="tools_female">Female</string>
    <string name="tools_standing">Standing</string>
    <string name="tools_recumbent">Recumbent</string>
    <string name="tools_days">Day(s)</string>
    <string name="tools_months">Month(s)</string>
    <string name="tools_years">Years(s)</string>
    <string name="upload_main_menu">Upload visits</string>
    <string name="upload_sum_up">Data to upload</string>
    <string name="upload_number_of_visits">Number of new visits to upload</string>
    <string name="upload_login_fail_message">Login fail. Please check you login details…</string>
    <string name="upload_button">Upload</string>
    <string name="tos">Terms of Service</string>
    <string name="button_tos">I agree</string>
    <string name="upload_number_of_patients">Number of new patients to upload</string>
    <string name="settings_login_stored_not_checked">Internet not available. Login details stored but not checked.</string>
    <string name="main_button_tos">Terms of Service</string>
    <string name="db_patient_delete_confirmation_message">Successfully removed</string>
    <string name="db_patient_info_caregiver_to_string">Caregiver: </string>
    <string name="plotvisit_showing_results_working">Working…</string>
    <string name="unknown_error">Oops! Something went wrong!</string>
    <string name="plot_results_title">Results</string>
    <string name="settings_choose_language">Choose language</string>
    <string name="tools_yes">Yes</string>
    <string name="tools_no">No</string>
</resources>
