<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:background="@drawable/back_tile"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="107dp"
        android:gravity="left|center_vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginLeft="5sp"
            android:background="@drawable/maventy_icon"
            android:contentDescription="@string/app_name"
            android:src="@drawable/maventy_icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:text="@string/welcome"
                                    android:textColor="#FFF"
            
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editText_welcome_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_username"
            android:textColor="#FFF"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
             android:background="@drawable/back_tile"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_main_database"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:background="@drawable/main_button_gradient"
                android:text="@string/main_button_database"
                android:textColor="#FFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_main_new_visit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:background="@drawable/main_button_gradient"
                android:text="@string/main_button_visit"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
                            android:background="@color/light_green"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_main_settings"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/back_tile"
                android:padding="5sp"
                android:text="@string/main_button_settings"
                android:textColor="#DDD"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_main_tos"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                     android:background="@drawable/back_tile"
                android:padding="5sp"
                android:text="@string/main_button_tos"
                android:textColor="#DDD"
                android:textSize="15sp" />
            
                        <Button
                android:id="@+id/button_main_tos_y"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                     android:background="@drawable/back_tile"
                android:padding="5sp"
                android:text="About"
                android:textColor="#DDD"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>